--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
   </head>
 <article role="profile">
   <aside class="avatar">
-    <img src="https://p11-mailws.icloud.com/wm/messagepart/NewLogo.jpg?guid=messagepart%3AINBOX%2F10452-2&type=image%2Fjpeg&uniq=isabel.l.serna&name=NewLogo.jpg&size=446528&dsid=1956627231&clientId=02554ACB-6549-41AD-9596-5A1B185BAEF7" width="110" height="120" margin-right: 1.5em; 
+    <img src="https://p11-mailws.icloud.com/wm/messagepart/NewLogo.jpg?guid=messagepart%3AINBOX%2F10452-2&type=image%2Fjpeg&uniq=isabel.l.serna&name=NewLogo.jpg&size=446528&dsid=1956627231&clientId=02554ACB-6549-41AD-9596-5A1B185BAEF7" width="50px" height="50px" margin-right: 1.5em; 
          alt="Metanoia" />
   </aside>
   
