--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
   </head>
 <article role="profile">
   <aside class="avatar">
-    <img src="https://p11-mailws.icloud.com/wm/messagepart/NewLogo.jpg?guid=messagepart%3AINBOX%2F10452-2&type=image%2Fjpeg&uniq=isabel.l.serna&name=NewLogo.jpg&size=446528&dsid=1956627231&clientId=02554ACB-6549-41AD-9596-5A1B185BAEF7" width="50px" height="50px" margin-right: 1.5em; 
+    <img src="https://p11-mailws.icloud.com/wm/messagepart/NewLogo.jpg?guid=messagepart%3AINBOX%2F10452-2&type=image%2Fjpeg&uniq=isabel.l.serna&name=NewLogo.jpg&size=446528&dsid=1956627231&clientId=02554ACB-6549-41AD-9596-5A1B185BAEF7" 
          alt="Metanoia" />
   </aside>
   
@@ -236,14 +236,14 @@ article[role="profile"] h2{
   height: 50px;
   width: 50px;
   float: right;
-  margin-left: 1em;
+  margin-left: 1.5em;
   display: inline-block;
   cursor: pointer;
   border: 1em solid $gray;
   position: relative;
   overflow: hidden;
   background-color: $gray;
-  z-index: 5;
+  z-index: 25;
   
 
 }
