--- a/profile.html
+++ b/profile.html
@@ -232,6 +232,8 @@ article[role="profile"] h2{
 }
 
 .avatar {
+  height: 100px;
+  width: 100px;
   float: right;
   margin-left: 1.5em;
   display: inline-block;
