--- a/profile.html
+++ b/profile.html
@@ -22,8 +22,7 @@
   </ul>
   
   <p>
-    Front End Web Developer for <a href="http://wedu.com/">wedü</a>. Kenpo Karate Black Belt & Gracie Jiu Jitsu Blue Belt. Tweeting nerdy stuff. Opinions are my own. 
-  </p>
+    Metanoia- The journey of changing one's mind, heart, self, or way of life.
 </article>
   
   
