--- a/Interests.html
+++ b/Interests.html
@@ -1,1 +1,65 @@
-
+<!DOCTYPE html>
+<html> 
+ <head>
+<title>Connect</title>
+</head>
+<style>
+h1 {
+   color: white;
+ }
+ body{
+  background-color: #F59CE6;
+ }
+ </style>
+ <h1>Interests</h1>
+ 
+ <form>
+<input type="button" value="Movies/Tv Shows" id="button1" onclick="https://isabel724.github.io/portfolio/Movies.html'"> 
+</form>
+ 
+ <style>
+  #button1 {
+   width: 150px;
+   height: 150px;
+    background-color: white;
+    -moz-border-radius: 500px;
+    -webkit-border-radius: 500px;
+    border-radius: 500px;
+    color: #2874A6;
+    font-family: 'Oswald';
+    font-size: 20px;
+    text-decoration: none;
+    cursor: pointer;
+    border:none;
+ </style>
+<br> 
+<br>
+<br>
+<br>
+ <form>
+<input type="button" value="Music" id="button2" onclick="'">
+</form>
+ <style>
+  #button2 {
+   height: 150px;
+   width: 150px;
+    background-color: white;
+    -moz-border-radius: 500px;
+    -webkit-border-radius: 500px;
+    border-radius:500px;
+    color: #2874A6;
+    font-family: 'Oswald';
+    font-size: 20px;
+    text-decoration: none;
+    cursor: pointer;
+    border:none;
+   </style>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+</html>
