--- a/Interests.html
+++ b/Interests.html
@@ -25,7 +25,7 @@ h1 {
     -moz-border-radius: 500px;
     -webkit-border-radius: 500px;
     border-radius: 500px;
-    color: #2874A6;
+    color: white;
     font-family: 'Oswald';
     font-size: 20px;
     text-decoration: none;
@@ -47,7 +47,7 @@ h1 {
     -moz-border-radius: 500px;
     -webkit-border-radius: 500px;
     border-radius:500px;
-    color: #2874A6;
+    color: white;
     font-family: 'Oswald';
     font-size: 20px;
     text-decoration: none;
