--- a/Interests.html
+++ b/Interests.html
@@ -14,7 +14,7 @@ h1 {
  <h1>Interests</h1>
  
  <form>
-<input type="button" value="Movies/Tv Shows" id="button1" onclick="https://isabel724.github.io/portfolio/Movies.html'"> 
+<input type="button" value="Movies/TV Shows" id="button1" onclick="https://isabel724.github.io/portfolio/Movies.html'"> 
 </form>
  
  <style>
@@ -25,7 +25,7 @@ h1 {
     -moz-border-radius: 500px;
     -webkit-border-radius: 500px;
     border-radius: 500px;
-    color: white;
+    color: #F59CE6;
     font-family: 'Oswald';
     font-size: 20px;
     text-decoration: none;
@@ -47,7 +47,7 @@ h1 {
     -moz-border-radius: 500px;
     -webkit-border-radius: 500px;
     border-radius:500px;
-    color: white;
+    color: #F59CE6;
     font-family: 'Oswald';
     font-size: 20px;
     text-decoration: none;
