--- a/Interests.html
+++ b/Interests.html
@@ -14,7 +14,7 @@ h1 {
  <h1>Interests</h1>
  
  <form>
-<input type="button" value="Movies/TV Shows" id="button1" onclick="https://isabel724.github.io/portfolio/Movies.html'"> 
+<input type="button" value="Movies/TV Shows" id="button1" onclick="https://brittany1102.github.io/portfolio/films.html'"> 
 </form>
  
  <style>
