--- a/Interests.html
+++ b/Interests.html
@@ -13,9 +13,10 @@ h1 {
  </style>
  <h1>Interests</h1>
  
- <form>
-<input type="button" value="Movies/TV Shows" id="button1" onclick="https://brittany1102.github.io/portfolio/films.html'"> 
-</form>
+ <a href="'https://brittany1102.github.io/portfolio/films.htm">
+    <img id = "photo"
+src="https://i.pinimg.com/736x/97/7e/d0/977ed015b138a691639ccbd646f9660d--transparent-overlays-tumblr-transparents.jpg"/>
+</a>
  
  <style>
   #button1 {
