--- a/Interests.html
+++ b/Interests.html
@@ -11,13 +11,14 @@ h1 {
   background-color: #F59CE6;
  }
  </style>
+<body>
  <h1>Interests</h1>
  
  <a href="'https://brittany1102.github.io/portfolio/films.htm">
     <img id = "photo"
 src="https://i.pinimg.com/736x/97/7e/d0/977ed015b138a691639ccbd646f9660d--transparent-overlays-tumblr-transparents.jpg"/>
 </a>
- 
+ </body>
  <style>
   #button1 {
    width: 150px;
