--- a/Interests.html
+++ b/Interests.html
@@ -10,6 +10,12 @@ h1 {
  body{
   background-color: #F59CE6;
  }
+ 
+ #photo{
+ border-radius:360px;
+ height:150px;
+ width:150px;
+ }
  </style>
 <body>
  <h1>Interests</h1>
