--- a/Interests.html
+++ b/Interests.html
@@ -20,7 +20,7 @@ h1 {
 <body>
  <h1>Interests</h1>
  
- <a href="'https://brittany1102.github.io/portfolio/films.htm">
+ <a href="'https://brittany1102.github.io/portfolio/films.html">
     <img id = "photo"
 src="https://i.pinimg.com/736x/97/7e/d0/977ed015b138a691639ccbd646f9660d--transparent-overlays-tumblr-transparents.jpg"/>
 </a>
