--- a/Interests.html
+++ b/Interests.html
@@ -11,20 +11,14 @@ h1 {
   background-color: #F59CE6;
  }
  
- #photo{
- border-radius:360px;
- height:150px;
- width:150px;
+
  }
  </style>
-<body>
+
  <h1>Interests</h1>
- 
- <a href="'https://brittany1102.github.io/portfolio/films.html">
-    <img id = "photo"
-src="https://i.pinimg.com/736x/97/7e/d0/977ed015b138a691639ccbd646f9660d--transparent-overlays-tumblr-transparents.jpg"/>
-</a>
- </body>
+  <form>
+<input type="button" value="Movies/TV Shows" id="button1" onclick="https://isabel72.4github.io/portfolio/Movies.html'">
+</form>
  <style>
   #button1 {
    width: 150px;
