--- a/Movies.html
+++ b/Movies.html
@@ -3,7 +3,8 @@
 <head>
  
 <title> Interests </title>
-
+ </head>
+ <style>
    body {
  font-family: "Lucida Console", monospace;
  background-color: pink;
@@ -57,8 +58,7 @@ margin-left:25px;
 #quote3{
  height:250px;
  width:500px;} </style>
-
-</head>
+ </style>
 <body>
   
 <h1><strong> Films/ TV SHOWS </strong></h1>
