--- a/Movies.html
+++ b/Movies.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
- 
+  <link class="jsbin" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
+<script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js"></script>
+<meta charset=utf-8 />
 <title> Interests </title>
- </head>
+<!--[if IE]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
  <style>
+   article, aside, figure, footer, header, hgroup, 
+  menu, nav, section { display: block; }
    body {
  font-family: "Lucida Console", monospace;
  background-color: pink;
@@ -58,7 +65,8 @@ margin-left:25px;
 #quote3{
  height:250px;
  width:500px;} </style>
- </style>
+
+</head>
 <body>
   
 <h1><strong> Films/ TV SHOWS </strong></h1>
