--- a/Interests.html
+++ b/Interests.html
@@ -17,7 +17,7 @@ h1 {
 
  <h1>Interests</h1>
   <form>
-<input type="button" value="Movies/TV Shows" id="button1" onclick="window.location.href='https://isabel72.4github.io/portfolio/Movies.html'">
+<input type="button" value="Movies/TV Shows" id="button1" onclick="window.location.href='https://isabel724.github.io/portfolio/Movies.html'">
 </form>
  <style>
   #button1 {
