--- a/Interests.html
+++ b/Interests.html
@@ -39,7 +39,7 @@ h1 {
 <br>
 <br>
  <form>
-<input type="button" value="Music" id="button2" onclick="https://santana7.github.io/Portfolio/metanoia.html'">
+<input type="button" value="Music" id="button2" onclick= "window.location.href='https://santana7.github.io/Portfolio/metanoia.html'">
 </form>
  <style>
   #button2 {
