--- a/FinalProject.html
+++ b/FinalProject.html
@@ -65,7 +65,7 @@ h1 {
  <br>
 
  <form>
-<input type="button" value="Click to go back to homepage" id="homepage" onclick="'"> 
+<input type="button" value="Click to go back to homepage" id="homepage" onclick="window.location.href'https://isabel724.github.io/portfolio/FinalProject.html"> 
 </form>
 <style>
   #homepage {
