--- a/references.html
+++ b/references.html
@@ -37,9 +37,11 @@ National Youth Crisis Hotline	800-448-4663<br>
   <br>
      <br>
      <br>
-<form>
+<body>
+ <form>
 <input type= "button" value = "Click to go back to Connect page" id = "connect" onclick ="window.location.href'https://isabel724.github.io/portfolio/FinalProject.html'"> 
 </form>
+     </body>
 <style>
   #connect {
     background-color: white;
