--- a/FinalProject.html
+++ b/FinalProject.html
@@ -15,7 +15,7 @@ h1 {
  <h1>Connect</h1>
  
  <form>
-<input type="button" value="Talk To Others" id="button1" onclick="window.location.href=''"> 
+<input type="button" value="Talk To Others" id="button1" onclick="window.location.href='https://isabel724.github.io/portfolio/talktoothers.html'"> 
 </form>
  
  <style>
