--- a/aboutme.html
+++ b/aboutme.html
@@ -64,7 +64,8 @@
 <h2> Reflection </h2>
 <p> Today was good. I got to work more on my final project. I got a lot done today. It was very frustrating at time but I was able to get most of it done.
  <body>
-
+<h2>Reflection<h2>
+ <p> Today we all finished our own parts. We also got to put all of our separate work together onto our homepage.
  <h2> Reflection </h2>
  <p> Today was good. I was able to understand what we were doing from yesterday and today about bubble sort and binary search.
 <h2>Dog</h2>
