--- a/profile.html
+++ b/profile.html
@@ -9,6 +9,49 @@
     <img src="https://p11-mailws.icloud.com/wm/messagepart/NewLogo.jpg?guid=messagepart%3AINBOX%2F10452-2&type=image%2Fjpeg&uniq=isabel.l.serna&name=NewLogo.jpg&size=446528&dsid=1956627231&clientId=02554ACB-6549-41AD-9596-5A1B185BAEF7" alt="Avatar" />
   </aside>
   
+   <a href="'https://isabel724.github.io/portfolio/profile.html">
+    <img id = "photo"
+    <img src="https://p11-mailws.icloud.com/wm/messagepart/NewLogo.jpg?guid=messagepart%3AINBOX%2F10452-2&type=image%2Fjpeg&uniq=isabel.l.serna&name=NewLogo.jpg&size=446528&dsid=1956627231&clientId=02554ACB-6549-41AD-9596-5A1B185BAEF7" alt="Avatar" />
+src=""/>
+</a>
+    </body>
+</html>
+
+CSS:
+#photo{
+    border-radius:360px;
+}
+
+body{
+    text-align:center;
+    text-decoration:overline;
+    padding:20px;
+}
+
+h1 {
+    letter-spacing: 3px;
+}
+a:link, a:visited {
+    border-radius:360px;
+    color: white;
+    padding: 10px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+
+a:hover, a:active {
+    background-color: black;
+}
+
+  
+  
+  
+  
+  
+  
+  
   <h2>Metanoia Developers</h2>
   <ul class="vitals">
     <li>
