--- a/profile.html
+++ b/profile.html
@@ -6,18 +6,18 @@
   </head>
 <article role="profile">
   <aside class="avatar">
-    <img src="https://p11-mailws.icloud.com/wm/messagepart/NewLogo.jpg?guid=messagepart%3AINBOX%2F10452-2&type=image%2Fjpeg&uniq=isabel.l.serna&name=NewLogo.jpg&size=446528&dsid=1956627231&clientId=02554ACB-6549-41AD-9596-5A1B185BAEF7" alt="Avatar" />
-  </aside>
-  
    <a href="'https://isabel724.github.io/portfolio/profile.html">
     <img id = "photo"
     <img src="https://p11-mailws.icloud.com/wm/messagepart/NewLogo.jpg?guid=messagepart%3AINBOX%2F10452-2&type=image%2Fjpeg&uniq=isabel.l.serna&name=NewLogo.jpg&size=446528&dsid=1956627231&clientId=02554ACB-6549-41AD-9596-5A1B185BAEF7" alt="Avatar" />
+  </aside>
+  
+
 src=""/>
 </a>
     </body>
 </html>
 
-CSS:
+<style>
 #photo{
     border-radius:360px;
 }
@@ -44,11 +44,8 @@ a:link, a:visited {
 a:hover, a:active {
     background-color: black;
 }
-
   
-  
-  
-  
+</style>
   
   
   
