--- a/profile.html
+++ b/profile.html
@@ -33,7 +33,7 @@ h1 {
 }
 a:link, a:visited {
     border-radius:360px;
-    color: white;
+    color: black;
     padding: 10px 10px;
     text-align: center;
     text-decoration: none;
