--- a/profile.html
+++ b/profile.html
@@ -6,13 +6,13 @@
   </head>
 <article role="profile">
   <aside class="avatar">
-   <a href="'https://isabel724.github.io/portfolio/profile.html">
+   <a href="'">
     <img id = "photo"
     <img src="https://p11-mailws.icloud.com/wm/messagepart/NewLogo.jpg?guid=messagepart%3AINBOX%2F10452-2&type=image%2Fjpeg&uniq=isabel.l.serna&name=NewLogo.jpg&size=446528&dsid=1956627231&clientId=02554ACB-6549-41AD-9596-5A1B185BAEF7" alt="Avatar" />
   </aside>
   
 
-src=""/>
+
 </a>
     </body>
 </html>
