--- a/aboutus.html
+++ b/aboutus.html
@@ -2,5 +2,10 @@
 <head>
 <h1> About Us<h1>
 </head>
-<body>
-<p> Hi</p>
+  <style>
+   background c
+  
+ <h3> This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and Isabel Serna. We are four students in girls who code at Goldman Sachs.
+   We made this website as a safe place for people who have been through depression and still go through depression to go to to help them. The idea of this 
+   website came to us because some of us ourselves still deal with depression and have gone through it. This website is filled with four differnt categories 
+   to go into.
