--- a/aboutus.html
+++ b/aboutus.html
@@ -3,9 +3,15 @@
 <h1> About Us<h1>
 </head>
   <style>
-   background c
+h1 {
+   color: white;
+ }
+ body{
+  background-color: https://www.xmple.com/wallpaper/blue-pink-gradient-linear-640x480-c2-ff69b4-87ceeb-a-15-f-14.svg;
+ }
+ </style>
   
  <h3> This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and Isabel Serna. We are four students in girls who code at Goldman Sachs.
    We made this website as a safe place for people who have been through depression and still go through depression to go to to help them. The idea of this 
    website came to us because some of us ourselves still deal with depression and have gone through it. This website is filled with four differnt categories 
-   to go into.
+   to go into.</h3>
