--- a/aboutus.html
+++ b/aboutus.html
@@ -7,9 +7,10 @@ h1 {
    color: white;
  }
  body{
-  background-color: https://www.xmple.com/wallpaper/blue-pink-gradient-linear-640x480-c2-ff69b4-87ceeb-a-15-f-14.svg;
+  background-image:url(" https://www.xmple.com/wallpaper/blue-pink-gradient-linear-640x480-c2-ff69b4-87ceeb-a-15-f-14.svg");
  }
  </style>
+  </body>
   
  <h3> This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and Isabel Serna. We are four students in girls who code at Goldman Sachs.
    We made this website as a safe place for people who have been through depression and still go through depression to go to to help them. The idea of this 
