--- a/aboutus.html
+++ b/aboutus.html
@@ -4,15 +4,15 @@
 </head>
   <style>
 h1 {
-   color: white;
+   color: Black;
  }
- body{
   background-image:url(" https://www.xmple.com/wallpaper/blue-pink-gradient-linear-640x480-c2-ff69b4-87ceeb-a-15-f-14.svg");
  }
  </style>
   </body>
-  
- <h3> This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and Isabel Serna. We are four students in girls who code at Goldman Sachs.
-   We made this website as a safe place for people who have been through depression and still go through depression to go to to help them. The idea of this 
-   website came to us because some of us ourselves still deal with depression and have gone through it. This website is filled with four differnt categories 
-   to go into.</h3>
+  <br>
+  <br>
+ <h3> This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and Isabel Serna. We are four students in girls who code 
+   at Goldman Sachs. We made this website as a safe place for people who have been through depression and still go through depression to go
+   to to help them. The idea of this website came to us because some of us ourselves still deal with depression and have gone through it. 
+   This website is filled with four differnt categories to go into.</h3>
