--- a/aboutus.html
+++ b/aboutus.html
@@ -6,8 +6,9 @@
 h1 {
    color: Black;
  }
+    <body>
   background-image:url("https://www.xmple.com/wallpaper/blue-pink-gradient-linear-640x480-c2-ff69b4-87ceeb-a-15-f-14.svg");
- 
+ </body>
  </style>
  
   <br>
