--- a/aboutus.html
+++ b/aboutus.html
@@ -27,3 +27,15 @@ h1 {
    are alone. There are other people who have the same struggles that they can talk to and things they can do to cope from <br>
    when they are feeling depressed. The whole meaning of Metanoia is changing one's mind, heart, self, or way of life. It's <br>
    the journey of helping one get to a better path and that's what we want to do to be able to help others.</h3></center>
+<style>
+  .bordered {
+    width: 200px;
+    height: 100px;
+    padding: 20px;
+    border: 10px double yellowgreen;
+  }
+</style>
+
+<div class="bordered">
+Box with a border
+</div>
