--- a/aboutus.html
+++ b/aboutus.html
@@ -29,14 +29,14 @@ h1 {
    the journey of helping one get to a better path and that's what we want to do to be able to help others.</h3></center>
 <style>
   .bordered {
-    width: 200px;
-    height: 100px;
+    width: 600px;
+    height: 600px;
     padding: 20px;
-    border: 10px double yellowgreen;
+    border: 20px double white;
   }
 </style>
 
 <div class="bordered">
-Box with a border
+Hi
 </div>
     </html>
