--- a/aboutus.html
+++ b/aboutus.html
@@ -10,8 +10,18 @@ h1 {
   background-image:url("https://www.xmple.com/wallpaper/blue-pink-gradient-linear-640x480-c2-ff69b4-87ceeb-a-15-f-14.svg");
     }
     </style>
-  <br>
- <h3><center> This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and Isabel Serna. We are four <br>
+ 
+<style>
+  .bordered {
+    width: 600px;
+    height: 600px;
+    padding: 20px;
+    border: 20px double white;
+  }
+</style>
+
+<div class="bordered">
+   This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and Isabel Serna. We are four <br>
    students in girls who code at Goldman Sachs. Nabeeha is a sixteen year old girl and goes to school at Fiorello H. <br>
    LaGuardia High School. Santana is a seventeen year old girl who goes to Columbia Secondary School for Math Science <br>
    and Engineering. Brittany Torres is a seventeen year old girl who goes to All City Leadership Secondary School. <br>
@@ -27,16 +37,5 @@ h1 {
    are alone. There are other people who have the same struggles that they can talk to and things they can do to cope from <br>
    when they are feeling depressed. The whole meaning of Metanoia is changing one's mind, heart, self, or way of life. It's <br>
    the journey of helping one get to a better path and that's what we want to do to be able to help others.</h3></center>
-<style>
-  .bordered {
-    width: 600px;
-    height: 600px;
-    padding: 20px;
-    border: 20px double white;
-  }
-</style>
-
-<div class="bordered">
-Hi
 </div>
     </html>
