--- a/aboutus.html
+++ b/aboutus.html
@@ -13,8 +13,8 @@ h1 {
  
 <style>
   .bordered {
-    width: 600px;
-    height: 600px;
+    width: 800px;
+    height: 400px;
     padding: 20px;
     border: 20px double white;
   }
@@ -36,6 +36,6 @@ h1 {
    put your name an a description about yourself. Our goal in this website is for people to be able to not feel like they<br>
    are alone. There are other people who have the same struggles that they can talk to and things they can do to cope from <br>
    when they are feeling depressed. The whole meaning of Metanoia is changing one's mind, heart, self, or way of life. It's <br>
-   the journey of helping one get to a better path and that's what we want to do to be able to help others.</h3></center>
+   the journey of helping one get to a better path and that's what we want to do to be able to help others.
 </div>
     </html>
