--- a/aboutus.html
+++ b/aboutus.html
@@ -14,14 +14,14 @@ h1 {
 <style>
   .bordered {
     width: 800px;
-    height: 400px;
+    height: 600px;
     padding: 20px;
     border: 20px double white;
   }
 </style>
 
 <div class="bordered">
-   This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and Isabel Serna. We are four <br>
+   <h5>This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and Isabel Serna. We are four <br>
    students in girls who code at Goldman Sachs. Nabeeha is a sixteen year old girl and goes to school at Fiorello H. <br>
    LaGuardia High School. Santana is a seventeen year old girl who goes to Columbia Secondary School for Math Science <br>
    and Engineering. Brittany Torres is a seventeen year old girl who goes to All City Leadership Secondary School. <br>
@@ -36,6 +36,6 @@ h1 {
    put your name an a description about yourself. Our goal in this website is for people to be able to not feel like they<br>
    are alone. There are other people who have the same struggles that they can talk to and things they can do to cope from <br>
    when they are feeling depressed. The whole meaning of Metanoia is changing one's mind, heart, self, or way of life. It's <br>
-   the journey of helping one get to a better path and that's what we want to do to be able to help others.
+   the journey of helping one get to a better path and that's what we want to do to be able to help others.</h5>
 </div>
     </html>
