--- a/aboutus.html
+++ b/aboutus.html
@@ -20,7 +20,7 @@ h1 {
   }
 </style>
 
-<div class="bordered">
+<div class="limit">
    <h7>This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and Isabel Serna. We are four students
      in girls who code at Goldman Sachs. Nabeeha is a sixteen year old girl and goes to school at Fiorello H. LaGuardia High School. 
     Santana is a seventeen year old girl who goes to Columbia Secondary School for Math Science 
