--- a/aboutus.html
+++ b/aboutus.html
@@ -29,4 +29,23 @@ h1 {
    when they are feeling depressed. The whole meaning of Metanoia is changing one's mind, heart, self, or way of life. It's 
    the journey of helping one get to a better path and that's what we want to do to be able to help others.</h3>
 
+    
+    <style>
+      <p style="border: 10px double white">
+This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and Isabel Serna. We are four students
+     in girls who code at Goldman Sachs. Nabeeha is a sixteen year old girl and goes to school at Fiorello H. LaGuardia High School. 
+    Santana is a seventeen year old girl who goes to Columbia Secondary School for Math Science 
+   and Engineering. Brittany Torres is a seventeen year old girl who goes to All City Leadership Secondary School. 
+   Isabel Serna is a sixteen year old girl who goes to Roselle Park High Schoool. We made this website as an openly safe
+   place for people who have been through depression and still go through depression to go and cope throughtheir tough 
+   times. The idea of this website came to us because some of us ourselves still deal with depression and have gone 
+   through it. This website is filled with four different categories to go into. In interests you can go and look at 
+   different interests people have such as Movies/ TV Shows, and types of Music. In Connect you can be able to login and 
+   talk to others one on one. As well, there is a references page where we have different phone numbers for people to be
+   able to call and talk instantly. In the Express page you can be able to write anything you want.You can talk about how 
+   you're feeling or your own stories as to how you became depressed. In the Profile page it is completely optional you can 
+   put your name an a description about yourself. Our goal in this website is for people to be able to not feel like they
+   are alone. There are other people who have the same struggles that they can talk to and things they can do to cope from 
+   when they are feeling depressed. The whole meaning of Metanoia is changing one's mind, heart, self, or way of life. It's 
+   the journey of helping one get to a better path and that's what we want to do to be able to help others.</p>
     </html>
