--- a/aboutus.html
+++ b/aboutus.html
@@ -48,4 +48,5 @@ This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and I
    are alone. There are other people who have the same struggles that they can talk to and things they can do to cope from 
    when they are feeling depressed. The whole meaning of Metanoia is changing one's mind, heart, self, or way of life. It's 
    the journey of helping one get to a better path and that's what we want to do to be able to help others.</p>
+    </style>
     </html>
