--- a/aboutus.html
+++ b/aboutus.html
@@ -9,8 +9,12 @@ h1 {
   body{
   background-image:url("https://www.xmple.com/wallpaper/blue-pink-gradient-linear-640x480-c2-ff69b4-87ceeb-a-15-f-14.svg");
     }
-   
-      <p style="border: 10px solid white">
+    
+    </style>
+    
+    <table style="border: 1px solid black">
+<tr>
+<td>
 This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and Isabel Serna. We are four students
      in girls who code at Goldman Sachs. Nabeeha is a sixteen year old girl and goes to school at Fiorello H. LaGuardia High School. 
     Santana is a seventeen year old girl who goes to Columbia Secondary School for Math Science 
@@ -26,6 +30,9 @@ This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and I
    put your name an a description about yourself. Our goal in this website is for people to be able to not feel like they
    are alone. There are other people who have the same struggles that they can talk to and things they can do to cope from 
    when they are feeling depressed. The whole meaning of Metanoia is changing one's mind, heart, self, or way of life. It's 
-   the journey of helping one get to a better path and that's what we want to do to be able to help others.</p>
-    </style>
+   the journey of helping one get to a better path and that's what we want to do to be able to help others.
+</td>
+</tr>
+</table>
+   
     </html>
