--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,7 @@ h1 {
     
     </style>
     
-    <table style="border: 1px solid black">
+    <table style="border: 10px double white">
 <tr>
 <td>
 This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and Isabel Serna. We are four students
