--- a/aboutus.html
+++ b/aboutus.html
@@ -13,6 +13,8 @@ h1 {
     </style>
     
     <table style="border: 10px double white">
+      <table style="text-align:center;">
+ 
 <tr>
 <td>
 This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and Isabel Serna. We are four students<br>
