--- a/aboutus.html
+++ b/aboutus.html
@@ -30,7 +30,7 @@ This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and I
    talk to others one on one. As well, there is a references page where we have different phone numbers for people to be<br>
    able to call and talk instantly. In the Express page you can be able to write anything you want.You can talk about how <br>
    you're feeling or your own stories as to how you became depressed. In the Profile page it is completely optional you can <br>
-   put your name an a description about yourself. Our goal in this website is for people to be able to not feel like they<br>
+   put your name and a description about yourself. Our goal in this website is for people to be able to not feel like they<br>
    are alone. There are other people who have the same struggles that they can talk to and things they can do to cope from <br>
    when they are feeling depressed. The whole meaning of Metanoia is changing one's mind, heart, self, or way of life. It's <br>
    the journey of helping one get to a better path and that's our goal to help others.
