--- a/aboutus.html
+++ b/aboutus.html
@@ -9,6 +9,9 @@ h1 {
   body{
   background-image:url("https://www.xmple.com/wallpaper/blue-pink-gradient-linear-640x480-c2-ff69b4-87ceeb-a-15-f-14.svg");
     }
+    table{
+    text-align:center; 
+    font-size:25px;}
     
     </style>
     
@@ -17,7 +20,7 @@ h1 {
  
 <tr>
 <td>
-  <table style="text-align:center;">
+  <table id = "table">
 This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and Isabel Serna. We are four students<br>
      in girls who code at Goldman Sachs. Nabeeha is a sixteen year old girl and goes to school at Fiorello H. <br>
   LaGuardia High School. Santana is a seventeen year old girl who goes to Columbia Secondary School for Math Science<br>
