--- a/aboutus.html
+++ b/aboutus.html
@@ -11,7 +11,8 @@ h1 {
     }
     table{
     text-align:center; 
-    font-size:25px;}
+    font-size:25px;
+    margin:auto;}
     
     </style>
     
