--- a/aboutus.html
+++ b/aboutus.html
@@ -24,10 +24,10 @@ h1 {
   <table id = "table">
 This website was made by Nabeeha Anwar, Santana Laureano, Brittany Torres, and Isabel Serna. We are four students<br>
      in girls who code at Goldman Sachs. Nabeeha is a sixteen year old girl and goes to school at Fiorello H. <br>
-  LaGuardia High School. Santana is a seventeen year old girl who goes to Columbia Secondary School for Math Science<br>
-  and Engineering. Brittany Torres is a seventeen year old girl who goes to All City Leadership Secondary School. <br>
-  Isabel Serna is a sixteen year old girl who goes to Roselle Park High Schoool. We made this website as an openly safe<br>
-  place for people who have been through depression and still go through depression to goand cope throughtheir tough <br>
+  LaGuardia High School. Santana is a seventeen year old girl who goes to Columbia Secondary School for Math, Science<br>
+  and Engineering. Brittany is a seventeen year old girl who goes to All City Leadership Secondary School. <br>
+  Isabel is a sixteen year old girl who goes to Roselle Park High Schoool. We made this website to provide<br>
+  an open space for people who have been through depression and still go through depression to go and cope through their <br> tough 
    times. The idea of this website came to us because some of us ourselves still deal with depression and have gone <br>
    through it. This website is filled with four different categories to go into. In interests you can go and look at <br>
    different interests people have such as Movies/ TV Shows, and types of Music. In Connect you can be able to login and <br>
