--- a/FinalProject.html
+++ b/FinalProject.html
@@ -80,6 +80,53 @@ h1 {
     cursor: pointer;
     border:none;
    </style>
+ 
+ 
+    <style>
+
+#content-wrapper{
+  display:table;
+}
+
+#content{
+  display:table-row;
+}
+
+#content>div{
+  display:table-cell
+}
+
+/*adding some extras for demo purposes*/
+#content-wrapper{
+  width:100%;
+  height:100%;
+  top:0px;
+  left:0px;
+  position:absolute;
+}
+#nav{
+  width:100px;
+  background:yellow;
+}
+#body{
+  background:blue;
+}
+</style>
+
+  </head>
+  <body>
+    <div id="content-wrapper">
+      <div id="content">
+        <div id="nav">
+          Left hand content
+        </div>
+        <div id="body">
+          Right hand content
+        </div>
+      </div>
+    </div>
+  </body>
+ 
 
 </html>
 
