--- a/references.html
+++ b/references.html
@@ -37,6 +37,52 @@ National Youth Crisis Hotline	800-448-4663<br>
   <br>
      <br>
      <br>
+     
+     
+    <style>
+
+#content-wrapper{
+  display:table;
+}
+
+#content{
+  display:table-row;
+}
+
+#content>div{
+  display:table-cell
+}
+
+/*adding some extras for demo purposes*/
+#content-wrapper{
+  width:100%;
+  height:100%;
+  top:0px;
+  left:0px;
+  position:absolute;
+}
+#nav{
+  width:100px;
+  background:yellow;
+}
+#body{
+  background:blue;
+}
+</style>
+
+  </head>
+  <body>
+    <div id="content-wrapper">
+      <div id="content">
+        <div id="nav">
+          Left hand content
+        </div>
+        <div id="body">
+          Right hand content
+        </div>
+      </div>
+    </div>
+  </body>
 <body>
  <form>
 <input type= "button" value = "Click to go back to Connect page" id = "connect" onclick ="window.location.href'https://isabel724.github.io/portfolio/FinalProject.html'"> 
